[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Textures/Interfaz de usuario/just_color.png" type="Texture" id=1]
[ext_resource path="res://scenes/Plano_information_/Plano.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Navegacion/salir_over.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Navegacion/Salir.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Navegacion/Buttons_options_normal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Navegacion/Buttons_options_over.png" type="Texture" id=6]
[ext_resource path="res://Assets/Font/Arial/ARIBL0.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Font/Arial/Arialn.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/Mapa_elevation_Rallay_1/Scripts/Mapa_elevation_Rally_1.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 25
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_color = Color( 0.611765, 0, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
resource_name = "Intro_exit"
length = 0.23
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Telon:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.08, 0.19 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.0117647 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Telon:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.19, 0.2, 0.23 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Telon:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.00999262 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Telon:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1086.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Telon:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[node name="Mapa_elevation_Rally_1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 47.0
margin_top = 192.0
margin_right = 1444.0
margin_bottom = 1037.0
color = Color( 1, 1, 1, 0.411765 )

[node name="Plano" parent="." instance=ExtResource( 2 )]
margin_left = 718.0
margin_top = 610.0
margin_right = -159.0
margin_bottom = -31.0
rect_scale = Vector2( 0.71, 0.71 )

[node name="Buttons" type="Control" parent="."]

[node name="Con" type="HBoxContainer" parent="Buttons"]
margin_left = 37.0
margin_top = 29.0
margin_right = 618.0
margin_bottom = 127.0
custom_constants/separation = 60

[node name="Exit" type="TextureButton" parent="Buttons/Con"]
margin_right = 99.0
margin_bottom = 103.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Info" type="TextureButton" parent="Buttons/Con"]
margin_left = 159.0
margin_right = 645.0
margin_bottom = 103.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="Buttons/Con/Info"]
margin_left = 109.0
margin_top = 19.0
margin_right = 375.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Información"

[node name="Map" type="TextureButton" parent="Buttons/Con"]
margin_left = 705.0
margin_right = 1191.0
margin_bottom = 103.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="Buttons/Con/Map"]
margin_left = 208.0
margin_top = 20.0
margin_right = 327.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Mapa"

[node name="Go" type="TextureButton" parent="Buttons/Con"]
margin_left = 1251.0
margin_right = 1737.0
margin_bottom = 103.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="Buttons/Con/Go"]
margin_left = 183.0
margin_top = 21.0
margin_right = 343.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Vamos!"

[node name="ColorRect" type="ColorRect" parent="Buttons/Con"]
margin_left = 1797.0
margin_right = 1797.0
margin_bottom = 103.0

[node name="Texto" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Map" type="Control" parent="Texto"]

[node name="Titulo" type="Label" parent="Texto/Map"]
margin_left = 1484.0
margin_top = 193.0
margin_right = 1680.0
margin_bottom = 265.0
custom_colors/font_color = Color( 0.470588, 0.470588, 0.470588, 1 )
custom_fonts/font = SubResource( 3 )
text = "Rally_1"

[node name="text" type="Label" parent="Texto/Map/Titulo"]
margin_left = 2.0
margin_top = 52.0
margin_right = 342.0
margin_bottom = 379.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "
Este es el mapa de elevación de la pista. Recuerda todo lo que has aprendido previamente sobre la pendiente y aplícalo ahora para comprender cómo varía la elevación en esta pista. La pendiente te ayudará a interpretar la topografía y la dificultad del terreno. ¡Buena suerte!"
autowrap = true

[node name="text2" type="Label" parent="Texto/Map/Titulo"]
margin_left = 2.0
margin_top = 404.0
margin_right = 366.0
margin_bottom = 434.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Escribe aquí la pendiente que cálculaste con dos cifras 
decimales: "
autowrap = true

[node name="Input" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="Input"]
margin_left = 1592.0
margin_top = 664.0
margin_right = 1751.0
margin_bottom = 688.0
max_length = 7
caret_blink = true
caret_blink_speed = 0.3

[node name="Error" type="Label" parent="Input"]
margin_left = 1486.0
margin_top = 687.0
margin_right = 1850.0
margin_bottom = 750.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Error en el valor introducido! 
Vuelve a intentarlo con un número :-)"
autowrap = true

[node name="Correcto" type="Label" parent="Input"]
visible = false
margin_left = 1486.0
margin_top = 687.0
margin_right = 1850.0
margin_bottom = 750.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="Information" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="text" type="Label" parent="Information"]
margin_left = 48.0
margin_top = 189.0
margin_right = 899.0
margin_bottom = 813.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Calcular la pendiente entre dos puntos es una forma común de determinar la inclinación de una superficie. Aquí te explico cómo hacerlo:

Supongamos que tienes dos puntos en una superficie, llamémoslos P1 y P2. P1 tiene coordenadas (x1, y1) y P2 tiene coordenadas (x2, y2). Para calcular la pendiente entre estos dos puntos, sigue estos pasos:

Calcula la diferencia de alturas: Resta las coordenadas y de los dos puntos: Δy = y2 - y1.

Calcula la diferencia de distancias horizontales: Resta las coordenadas x de los dos puntos: Δx = x2 - x1.

Calcula la pendiente (m): Divide la diferencia de alturas (Δy) por la diferencia de distancias horizontales (Δx): m = Δy / Δx.

Ahora tienes la pendiente (m), que te indica cuánto cambia la altura (y) en relación con la distancia horizontal (x) entre los dos puntos. Un valor positivo de m significa que la superficie está inclinada hacia arriba desde P1 a P2, mientras que un valor negativo significa que la superficie está inclinada hacia abajo."
autowrap = true

[node name="vamos" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="text" type="Label" parent="vamos"]
margin_left = 721.0
margin_top = 405.0
margin_right = 1281.0
margin_bottom = 435.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Buen trabajo nuestro mecánico  nos dice que todo esta bien. "
autowrap = true

[node name="Next_scene" type="TextureButton" parent="vamos"]
margin_left = 760.0
margin_top = 485.0
margin_right = 1246.0
margin_bottom = 588.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="vamos/Next_scene"]
margin_left = 183.0
margin_top = 22.0
margin_right = 343.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Dale!"

[node name="Telon" type="ColorRect" parent="."]
margin_left = -6.0
margin_top = -6.0
margin_right = 1936.0
margin_bottom = 1086.0
rect_scale = Vector2( 1e-05, 1e-05 )
color = Color( 0, 0, 0, 0.00999262 )

[node name="Label" type="Label" parent="Telon"]
margin_left = 1643.0
margin_top = 1001.0
margin_right = 1893.0
margin_bottom = 1059.0
custom_fonts/font = SubResource( 6 )
text = "Cargando..."

[node name="cortina" type="AnimationPlayer" parent="."]
autoplay = "Intro_exit"
anims/Intro_exit = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="pressed" from="Buttons/Con/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Buttons/Con/Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="Buttons/Con/Map" to="." method="_on_Map_pressed"]
[connection signal="pressed" from="Buttons/Con/Go" to="." method="_on_Go_pressed"]
[connection signal="pressed" from="vamos/Next_scene" to="." method="_on_Next_scene_pressed"]
[connection signal="animation_finished" from="cortina" to="." method="_on_cortina_animation_finished"]
